# proyecto1Myp

./: Dockerfile  README.md  run_all.sh
chat-client/: Makefile  README.md
chat-client/include/: Connection.hpp  Controller.h  Controller.hpp  Lexer.hpp  MessageCodec.hpp  Model.hpp  ParserJSON.hpp  Token.hpp  View.hpp
chat-client/lexer/: chat_lexer.l  chat_lexer.ll
chat-client/src/: Connection.cpp  Controller.cpp  Main.cpp  MessageCodec.cpp  Model.cpp  ParserJSON.cpp  View.cpp  main.cpp
server/: CHANGELOG.md  LICENSE  server.cabal
server/doc/: design.md
server/serverChat/app/: Main.hs  ProtocolSmoke.hs
server/serverChat/src/Extra/: ReaderT.hs
server/serverChat/src/Server/: App.hs  ConnectionHandler.hs  ServerState.hs  ServerTypes.hs
server/serverChat/src/Server/Connection/: Actions.hs  Factory.hs  Types.hs
server/serverChat/src/Server/Parser/: Interface.hs  ParserTypes.hs  ProtocolCodec.hs
