cabal-version:      3.0

name:               serverChat

-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

synopsis:           TCP server for a chat application.

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            BSD-3-Clause

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Hector Valdes

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         hdvvaldes@gmail.com

-- A copyright notice.
-- copyright:
category:           Concurrency
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- TODO add documentation with this option
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable serverChat
    -- Import common warning flags.
    import:           warnings

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Server.ConnectionHandler,
      Server.ServerState,
      Server.App,
      Server.ServerTypes,
      Server.Parser.Interface,
      Server.Parser.ParserTypes,
      Extra.ReaderT

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
      base ^>=4.18.3.0,
    -- TCP Sockets
      network,
       -- Communication between threads
       stm,
       -- Data Structures
       containers,
       -- Merges IO with any Monad within transformer
       unliftio-core,
       -- Communication with env, within the transformer
       mtl,
       -- Communication with the inner monad inside the transformer
       transformers,
       -- Managing JSON
       aeson,
       -- String management
       bytestring,
       text,
    -- Directories containing source files.
    hs-source-dirs:
      serverChat/app,
      serverChat/src

    -- Base language which the package is written in.
    default-language: Haskell2010
